{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player1",
            "id": "f8b8c0a0-1234-4567-8901-123456789abc",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a1b2c3d4-1234-4567-8901-123456789abc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UseItem",
                    "type": "Button",
                    "id": "b2c3d4e5-1234-4567-8901-123456789abc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchItem",
                    "type": "Button",
                    "id": "c3d4e5f6-1234-4567-8901-123456789abc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "d4e5f6g7-1234-4567-8901-123456789abc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e5f6g7h8-1234-4567-8901-123456789abc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f6g7h8i9-1234-4567-8901-123456789abc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "g7h8i9j0-1234-4567-8901-123456789abc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "h8i9j0k1-1234-4567-8901-123456789abc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "i9j0k1l2-1234-4567-8901-123456789abc",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "j0k1l2m3-1234-4567-8901-123456789abc",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SwitchItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "k1l2m3n4-1234-4567-8901-123456789abc",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "l2m3n4o5-1234-4567-8901-123456789abc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UseItem",
                    "type": "Button",
                    "id": "m3n4o5p6-1234-4567-8901-123456789abc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchItem",
                    "type": "Button",
                    "id": "n4o5p6q7-1234-4567-8901-123456789abc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Arrow Keys",
                    "id": "o5p6q7r8-1234-4567-8901-123456789abc",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "p6q7r8s9-1234-4567-8901-123456789abc",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "q7r8s9t0-1234-4567-8901-123456789abc",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "r8s9t0u1-1234-4567-8901-123456789abc",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "s9t0u1v2-1234-4567-8901-123456789abc",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "t0u1v2w3-1234-4567-8901-123456789abc",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "u1v2w3x4-1234-4567-8901-123456789abc",
                    "path": "<Keyboard>/rightCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SwitchItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}